--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -224,14 +224,10 @@
     <!-- Button illumination -->
     <bool name="config_deviceHasVariableButtonBrightness">true</bool>
 
-    <!-- Device supports LED flashlight 
-    <bool name="config_enableTorch">true</bool>-->
+    <!-- Device supports LED flashlight -->
+    <bool name="config_device_has_camera_flash">true</bool>
 
     <!-- Disable lockscreen translucent decor by default -->
     <bool name="config_enableLockScreenTranslucentDecor">true</bool>
-
-    <!-- Performance profiles 
-    <string name="config_perf_profile_prop">sys.perf.profile</string>
-    <string name="config_perf_profile_default_entry">1</string>-->
 
 </resources>
